test/spec_vectors/simd_splat/fail/module_6.wat
(module (func (result v128) i16x8.splat (f32.const 1.0)))